Fix font size on mobile

--- a/src/assets/theming/_base.scss
+++ b/src/assets/theming/_base.scss
@@ -7,7 +7,7 @@ html {
   background-color: var(--background-color);
   color: var(--text-color);
   font-family: $main-font;
-  font-size: 50%;
+  font-size: 54%;
   scroll-behavior: smooth;
   font-feature-settings: normal;
   font-kerning: auto;
